<resources>
    <string name="app_name">Greenak</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="enter_code">Enter Code</string>
    <string name="final_reset">Set Password</string>
    <string name="text_view1">TextView</string>
    <string name="text_view2">TextView</string>
    <string name="imageview1">Image Description</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint"> Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email"> Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email ID</string>
    <string name="enter_registered_email">Please enter your registered email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="lbl_forgot_password2">Type in the email linked to your Greenak profile here.</string>
    <string name="forgot_password_msg">We will send a verification code to your registered email ID. </string>


    <string name="otp_title">Please enter the verification Code</string>
    <string name="otp_button_text">Verify</string>
    <string name="resend_msg">Didn’t receive the OTP?</string>
    <string name="resend_again_msg">Resend again</string>
    <string name="sent_to_91_xxxx_xxx">We have sent the verification code to your registered email ID</string>

    <string name="facebook_app_id">153350279321028</string>
    <string name="fb_login_protocol_scheme">fb153350279321028</string>
    <string name="welcome">Welcome</string>
    <string name="cancel_login">Cancel Login</string>
    <string name="error_login">An error occurred!</string>
    <string name="logout">Logout</string>
    <string name="firebase_error_login">Error!</string>

</resources>


