<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinatorLayout"
    tools:context=".ResetPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>


    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text= "Forgot Password?"
        android:textColor="@android:color/black"
        android:textSize="20sp" />-->




    <LinearLayout
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="70dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">



        <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@drawable/forgot_password2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/enter_registered_email"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />




        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/regularworksans"
        android:text="@string/forgot_password_msg"
        android:textSize="16dp" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"

       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:hint="@string/hint_email"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/silver_color"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>-->

    <!-- Login Button -->

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="Next"
        android:textAllCaps="false"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white" />



</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="20dp"
    android:visibility="gone" />

   <!-- <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>